--- a/site.html
+++ b/site.html
@@ -12,6 +12,12 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 @keyframes fadeUp{from{opacity:0;transform:translateY(30px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeUpDelay1{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 @keyframes fadeUpDelay2{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
+@keyframes pulseGlow{0%,100%{filter:drop-shadow(0 0 8px rgba(43,125,233,0.4)) drop-shadow(0 0 20px rgba(43,125,233,0.2))}50%{filter:drop-shadow(0 0 16px rgba(43,125,233,0.7)) drop-shadow(0 0 40px rgba(43,125,233,0.3))}}
+@keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-8px)}}
+@keyframes dotFloat1{0%,100%{transform:translate(0,0);opacity:0.3}25%{transform:translate(10px,-15px);opacity:0.6}50%{transform:translate(-5px,-25px);opacity:0.4}75%{transform:translate(-15px,-10px);opacity:0.5}}
+@keyframes dotFloat2{0%,100%{transform:translate(0,0);opacity:0.2}33%{transform:translate(-12px,10px);opacity:0.5}66%{transform:translate(8px,-8px);opacity:0.3}}
+@keyframes lineGrow{from{width:0}to{width:60px}}
+@keyframes statPop{from{opacity:0;transform:scale(0.8)}to{opacity:1;transform:scale(1)}}
 .animate-in{opacity:0;transform:translateY(20px);transition:opacity 0.6s ease-out,transform 0.6s ease-out}
 .animate-in.visible{opacity:1;transform:translateY(0)}
 .site-header{position:sticky;top:0;z-index:200;background:#fff;border-bottom:1px solid #e5e7eb;padding:12px 20px;display:flex;align-items:center;justify-content:space-between}
@@ -22,19 +28,28 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:linear-gradient(135deg,#2563EB 0%,#3B82F6 50%,#60A5FA 100%);padding:48px 20px 40px;text-align:center}
-.hero-title{font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1;animation:fadeUp 0.8s ease-out}
-.hero-auth{font-size:0.75rem;color:rgba(255,255,255,0.5);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
-.hero-sub{font-size:0.85rem;color:rgba(255,255,255,0.65);margin-top:16px;line-height:1.5;max-width:560px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
-.hero-stats{display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:20px;font-size:0.72rem;color:rgba(255,255,255,0.5);font-weight:500;animation:fadeUpDelay2 0.8s ease-out 0.4s backwards}
-.hero-stats span{background:rgba(255,255,255,0.06);padding:5px 12px;border-radius:20px}
-.hero-stats strong{color:rgba(255,255,255,0.85)}
-.hero-btns{margin-top:24px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap;animation:fadeUpDelay2 0.8s ease-out 0.5s backwards}
-.btn-primary{background:#2B7DE9;color:#fff;border:none;padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,box-shadow 0.2s ease,background 0.2s ease}
-.btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease}
-.btn-primary:hover{background:#1D6AD4;transform:scale(1.05);box-shadow:0 4px 12px rgba(43,125,233,0.3)}
-.btn-outline:hover{border-color:#fff;transform:scale(1.05)}
-@media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}}
+.hero{background:#080E1A;position:relative;overflow:hidden;padding:52px 20px 44px;text-align:center}
+.hero::before{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:radial-gradient(ellipse at 50% 80%,rgba(43,125,233,0.15) 0%,transparent 60%),radial-gradient(ellipse at 20% 20%,rgba(6,182,212,0.08) 0%,transparent 50%),radial-gradient(ellipse at 80% 30%,rgba(43,125,233,0.06) 0%,transparent 40%);pointer-events:none}
+.hero::after{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:url("data:image/svg+xml,%3Csvg width='400' height='400' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='80' r='1.5' fill='%232B7DE9' opacity='0.3'/%3E%3Ccircle cx='120' cy='40' r='1' fill='%2306B6D4' opacity='0.25'/%3E%3Ccircle cx='200' cy='100' r='1.2' fill='%232B7DE9' opacity='0.2'/%3E%3Ccircle cx='300' cy='60' r='1' fill='%2306B6D4' opacity='0.3'/%3E%3Ccircle cx='350' cy='120' r='1.5' fill='%232B7DE9' opacity='0.15'/%3E%3Ccircle cx='80' cy='180' r='1' fill='%2306B6D4' opacity='0.2'/%3E%3Ccircle cx='250' cy='200' r='1.3' fill='%232B7DE9' opacity='0.25'/%3E%3Ccircle cx='150' cy='250' r='1' fill='%2306B6D4' opacity='0.15'/%3E%3Ccircle cx='320' cy='280' r='1.5' fill='%232B7DE9' opacity='0.2'/%3E%3Ccircle cx='40' cy='320' r='1' fill='%2306B6D4' opacity='0.25'/%3E%3Ccircle cx='380' cy='350' r='1.2' fill='%232B7DE9' opacity='0.15'/%3E%3Cline x1='50' y1='80' x2='120' y2='40' stroke='%232B7DE9' stroke-width='0.3' opacity='0.12'/%3E%3Cline x1='120' y1='40' x2='200' y2='100' stroke='%2306B6D4' stroke-width='0.3' opacity='0.08'/%3E%3Cline x1='200' y1='100' x2='300' y2='60' stroke='%232B7DE9' stroke-width='0.3' opacity='0.1'/%3E%3Cline x1='250' y1='200' x2='320' y2='280' stroke='%2306B6D4' stroke-width='0.3' opacity='0.08'/%3E%3C/svg%3E");opacity:0.6;pointer-events:none}
+.hero-logo{position:relative;z-index:1;margin:0 auto 20px;animation:float 4s ease-in-out infinite,pulseGlow 3s ease-in-out infinite}
+.hero-logo svg{width:100px;height:120px}
+.hero-title{position:relative;z-index:1;font-size:2rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.1;animation:fadeUp 0.8s ease-out}
+.hero-auth{position:relative;z-index:1;font-size:0.75rem;color:rgba(43,125,233,0.8);text-transform:uppercase;letter-spacing:3px;margin-top:8px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
+.hero-line{width:60px;height:2px;background:linear-gradient(90deg,transparent,#2B7DE9,transparent);margin:12px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
+.hero-sub{position:relative;z-index:1;font-size:0.85rem;color:rgba(255,255,255,0.55);margin-top:16px;line-height:1.5;max-width:560px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
+.hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:24px;font-size:0.72rem;color:rgba(255,255,255,0.4);font-weight:500}
+.hero-stats span{background:rgba(43,125,233,0.1);border:1px solid rgba(43,125,233,0.2);padding:6px 14px;border-radius:20px;animation:statPop 0.5s ease-out backwards}
+.hero-stats span:nth-child(1){animation-delay:0.5s}
+.hero-stats span:nth-child(2){animation-delay:0.65s}
+.hero-stats span:nth-child(3){animation-delay:0.8s}
+.hero-stats span:nth-child(4){animation-delay:0.95s}
+.hero-stats strong{color:rgba(255,255,255,0.9)}
+.hero-btns{position:relative;z-index:1;margin-top:28px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap;animation:fadeUpDelay2 0.8s ease-out 0.5s backwards}
+.btn-primary{background:linear-gradient(135deg,#2B7DE9,#1D6AD4);color:#fff;border:none;padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,box-shadow 0.2s ease,background 0.2s ease;box-shadow:0 2px 12px rgba(43,125,233,0.3)}
+.btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(43,125,233,0.4);padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
+.btn-primary:hover{background:linear-gradient(135deg,#3B8BF5,#2B7DE9);transform:scale(1.05);box-shadow:0 4px 20px rgba(43,125,233,0.4)}
+.btn-outline:hover{border-color:#2B7DE9;transform:scale(1.05);box-shadow:0 2px 12px rgba(43,125,233,0.2)}
+@media(max-width:640px){.hero{padding:36px 16px 32px}.hero-title{font-size:1.5rem}.hero-logo svg{width:80px;height:96px}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
@@ -88,7 +103,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .vendor-row[data-tier="orange"]{border-left-color:#F97316;background:#fff7ed}
 .vendor-row[data-tier="red"]{border-left-color:#EF4444;background:#fef2f2}
 .vendor-row:last-child{border-bottom:none}
-.vendor-row:hover{background:#f8f9fa}
+.vendor-row:hover{background:#f8f9fa;transform:translateX(2px);transition:transform 0.15s ease}
 .vendor-name{font-size:0.82rem;font-weight:700;color:#0A1628;line-height:1.2}
 .vendor-name a{color:#2B7DE9;text-decoration:none}
 .vendor-name a:hover{text-decoration:underline}
@@ -108,7 +123,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 @media(min-width:640px){.p-grid{grid-template-columns:1fr 1fr 1fr}}
 @media(min-width:900px){.p-grid{grid-template-columns:1fr 1fr 1fr 1fr}}
 .p-card{background:#fff;border:1px solid #e5e7eb;border-radius:10px;padding:16px;cursor:pointer;transition:all 0.15s;display:flex;flex-direction:column}
-.p-card:hover{box-shadow:0 4px 16px rgba(0,0,0,0.08);transform:translateY(-1px)}
+.p-card:hover{box-shadow:0 8px 24px rgba(0,0,0,0.12);transform:translateY(-4px)}
 .p-name{font-size:0.82rem;font-weight:700;color:#0A1628;line-height:1.3;margin-bottom:4px}
 .p-cat{font-size:0.62rem;font-weight:700;text-transform:uppercase;letter-spacing:0.5px;margin-bottom:6px}
 .p-desc{font-size:0.7rem;color:#94a3b8;line-height:1.4;overflow:hidden;text-overflow:ellipsis;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical}
@@ -277,8 +292,20 @@ if (document.readyState === 'loading') {
 </header>
 
 <section class="hero">
+<div class="hero-logo"><svg viewBox="0 0 100 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+<ellipse cx="50" cy="65" rx="38" ry="42" stroke="#2B7DE9" stroke-width="1.5" opacity="0.5"/>
+<ellipse cx="50" cy="65" rx="38" ry="42" stroke="url(#glow1)" stroke-width="2.5"/>
+<rect x="30" y="30" width="40" height="50" rx="6" stroke="#fff" stroke-width="2" fill="none"/>
+<rect x="36" y="22" width="28" height="12" rx="4" stroke="#fff" stroke-width="1.5" fill="none"/>
+<line x1="36" y1="28" x2="64" y2="28" stroke="#fff" stroke-width="1" opacity="0.4"/>
+<rect x="30" y="30" width="40" height="8" rx="0" fill="rgba(43,125,233,0.15)" stroke="none"/>
+<line x1="30" y1="38" x2="70" y2="38" stroke="#fff" stroke-width="0.5" opacity="0.3"/>
+<text x="50" y="62" text-anchor="middle" fill="#fff" font-family="Arial,sans-serif" font-weight="900" font-size="16" letter-spacing="3">PRC</text>
+<defs><linearGradient id="glow1" x1="12" y1="23" x2="88" y2="107"><stop offset="0%" stop-color="#06B6D4"/><stop offset="100%" stop-color="#2B7DE9"/></linearGradient></defs>
+</svg></div>
 <div class="hero-title">PEPTIDE RESOURCE CENTER</div>
 <div class="hero-auth">The Peptide Authority</div>
+<div class="hero-line"></div>
 <p class="hero-sub">Your comprehensive destination for research peptide resources, education, and premium products</p>
 <div class="hero-stats">
 <span><strong>44+</strong> Products</span>
