--- a/site.html
+++ b/site.html
@@ -49,7 +49,17 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(43,125,233,0.4);padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
 .btn-primary:hover{background:linear-gradient(135deg,#3B8BF5,#2B7DE9);transform:scale(1.05);box-shadow:0 4px 20px rgba(43,125,233,0.4)}
 .btn-outline:hover{border-color:#2B7DE9;transform:scale(1.05);box-shadow:0 2px 12px rgba(43,125,233,0.2)}
-@media(max-width:640px){.hero{padding:36px 16px 32px}.hero-title{font-size:1.5rem}.hero-logo svg{width:80px;height:96px}}
+.hero-props{position:relative;z-index:1;display:flex;justify-content:center;gap:28px;flex-wrap:wrap;margin-top:28px}
+.hero-prop{text-align:center;opacity:0;transform:translateY(15px);transition:opacity 0.5s ease,transform 0.5s ease}
+.hero-prop.visible{opacity:1;transform:translateY(0)}
+.hero-prop:nth-child(1){transition-delay:0.3s}
+.hero-prop:nth-child(2){transition-delay:0.5s}
+.hero-prop:nth-child(3){transition-delay:0.7s}
+.hero-prop-label{font-size:0.62rem;text-transform:uppercase;letter-spacing:1.5px;color:rgba(43,125,233,0.7);font-weight:600;border:1px solid rgba(43,125,233,0.3);display:inline-block;padding:3px 10px;border-radius:4px;margin-bottom:6px}
+.hero-prop-text{font-size:0.95rem;font-weight:800;color:#fff;letter-spacing:-0.3px}
+.hero-prop + .hero-prop::before{content:'✦';position:absolute;color:rgba(43,125,233,0.5);font-size:0.6rem;margin-left:-18px;margin-top:14px}
+.hero-research{position:relative;z-index:1;font-size:0.68rem;color:rgba(255,255,255,0.25);font-style:italic;margin-top:24px;letter-spacing:0.5px}
+@media(max-width:640px){.hero{padding:36px 16px 32px}.hero-title{font-size:1.4rem}.hero-logo svg{width:80px;height:96px}.hero-props{gap:20px}.hero-prop-text{font-size:0.85rem}.hero-prop + .hero-prop::before{display:none}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
@@ -292,21 +302,34 @@ if (document.readyState === 'loading') {
 </header>
 
 <section class="hero">
-<div class="hero-logo"><svg viewBox="0 0 100 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-<ellipse cx="50" cy="65" rx="38" ry="42" stroke="#2B7DE9" stroke-width="1.5" opacity="0.5"/>
-<ellipse cx="50" cy="65" rx="38" ry="42" stroke="url(#glow1)" stroke-width="2.5"/>
-<rect x="30" y="30" width="40" height="50" rx="6" stroke="#fff" stroke-width="2" fill="none"/>
-<rect x="36" y="22" width="28" height="12" rx="4" stroke="#fff" stroke-width="1.5" fill="none"/>
-<line x1="36" y1="28" x2="64" y2="28" stroke="#fff" stroke-width="1" opacity="0.4"/>
-<rect x="30" y="30" width="40" height="8" rx="0" fill="rgba(43,125,233,0.15)" stroke="none"/>
-<line x1="30" y1="38" x2="70" y2="38" stroke="#fff" stroke-width="0.5" opacity="0.3"/>
-<text x="50" y="62" text-anchor="middle" fill="#fff" font-family="Arial,sans-serif" font-weight="900" font-size="16" letter-spacing="3">PRC</text>
-<defs><linearGradient id="glow1" x1="12" y1="23" x2="88" y2="107"><stop offset="0%" stop-color="#06B6D4"/><stop offset="100%" stop-color="#2B7DE9"/></linearGradient></defs>
+<div class="hero-logo"><svg viewBox="0 0 120 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+<!-- Outer oval -->
+<ellipse cx="60" cy="72" rx="46" ry="54" stroke="url(#glow1)" stroke-width="2.5"/>
+<ellipse cx="60" cy="72" rx="46" ry="54" stroke="#2B7DE9" stroke-width="1" opacity="0.3"/>
+<!-- Vial body -->
+<path d="M42 38 L42 100 Q42 108 50 108 L70 108 Q78 108 78 100 L78 38" stroke="#fff" stroke-width="2.2" fill="none" stroke-linejoin="round"/>
+<!-- Vial neck -->
+<path d="M46 24 L46 38 L74 38 L74 24" stroke="#fff" stroke-width="2" fill="none"/>
+<!-- Vial cap/rim -->
+<rect x="44" y="20" width="32" height="6" rx="2" stroke="#fff" stroke-width="1.8" fill="none"/>
+<!-- Cap line -->
+<line x1="46" y1="23" x2="74" y2="23" stroke="#fff" stroke-width="0.8" opacity="0.4"/>
+<!-- Neck ring -->
+<line x1="42" y1="38" x2="78" y2="38" stroke="#fff" stroke-width="0.8" opacity="0.5"/>
+<!-- PRC banner background -->
+<rect x="24" y="62" width="72" height="22" rx="3" fill="#0A1628" stroke="#2B7DE9" stroke-width="1.5"/>
+<!-- PRC text -->
+<text x="60" y="79" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="18" letter-spacing="5">PRC</text>
+<defs><linearGradient id="glow1" x1="14" y1="18" x2="106" y2="126"><stop offset="0%" stop-color="#06B6D4"/><stop offset="50%" stop-color="#2B7DE9"/><stop offset="100%" stop-color="#1D4ED8"/></linearGradient></defs>
 </svg></div>
-<div class="hero-title">PEPTIDE RESOURCE CENTER</div>
+<div class="hero-title">Premium Research Peptides<br>Without the Premium Price</div>
 <div class="hero-auth">The Peptide Authority</div>
 <div class="hero-line"></div>
-<p class="hero-sub">Your comprehensive destination for research peptide resources, education, and premium products</p>
+<div class="hero-props">
+<div class="hero-prop animate-in"><div class="hero-prop-label">Direct Sourcing</div><div class="hero-prop-text">Stop Overpaying</div></div>
+<div class="hero-prop animate-in"><div class="hero-prop-label">Quality Assurance</div><div class="hero-prop-text">Purity Guaranteed</div></div>
+<div class="hero-prop animate-in"><div class="hero-prop-label">Risk-Free</div><div class="hero-prop-text">Money-Back Guarantee</div></div>
+</div>
 <div class="hero-stats">
 <span><strong>44+</strong> Products</span>
 <span><strong>393</strong> Vendors Reviewed</span>
@@ -314,9 +337,11 @@ if (document.readyState === 'loading') {
 <span><strong>Updated</strong> Feb 2026</span>
 </div>
 <div class="hero-btns">
-<label for="tab-resources" class="btn-primary">Explore Resources</label>
-<label for="tab-vendors" class="btn-outline">Vendor Directory</label>
+<label for="tab-shop" class="btn-primary" onclick="switchTab('tab-shop');return false">Shop Peptides</label>
+<label for="tab-vendors" class="btn-outline" onclick="switchTab('tab-vendors');return false">Vendor Directory</label>
+<label for="tab-resources" class="btn-outline" onclick="switchTab('tab-resources');return false">Explore Resources</label>
 </div>
+<div class="hero-research">For Research Use Only.</div>
 </section>
 
 
