--- a/site.html
+++ b/site.html
@@ -295,13 +295,27 @@ if (document.readyState === 'loading') {
 </header>
 
 <section class="hero">
-<div class="hero-logo"><svg viewBox="0 0 120 130" fill="none" xmlns="http://www.w3.org/2000/svg">
-<ellipse cx="60" cy="68" rx="48" ry="52" stroke="#fff" stroke-width="2" opacity="0.85"/>
-<rect x="46" y="14" width="28" height="8" rx="2.5" fill="rgba(255,255,255,0.15)" stroke="#fff" stroke-width="1.5"/>
-<rect x="49" y="22" width="22" height="10" fill="none" stroke="#fff" stroke-width="1.5"/>
-<path d="M43 32 L43 98 Q43 106 51 106 L69 106 Q77 106 77 98 L77 32 Z" fill="rgba(255,255,255,0.06)" stroke="#fff" stroke-width="2" stroke-linejoin="round"/>
-<rect x="22" y="58" width="76" height="22" rx="3" fill="rgba(0,0,0,0.25)" stroke="#fff" stroke-width="1.5"/>
-<text x="60" y="74" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="17" letter-spacing="5">PRC</text>
+<div class="hero-logo"><svg viewBox="0 0 130 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+<!-- Outer oval - dark navy -->
+<ellipse cx="65" cy="72" rx="48" ry="56" stroke="#fff" stroke-width="2.8"/>
+<!-- Vial cap - flat top -->
+<rect x="44" y="16" width="42" height="10" rx="3" fill="rgba(255,255,255,0.1)" stroke="rgba(255,255,255,0.7)" stroke-width="1.8"/>
+<!-- Cap ridge line -->
+<line x1="44" y1="22" x2="86" y2="22" stroke="rgba(255,255,255,0.4)" stroke-width="1"/>
+<!-- Vial neck -->
+<path d="M50 26 L50 36 L80 36 L80 26" stroke="rgba(255,255,255,0.7)" stroke-width="1.8" fill="none"/>
+<!-- Vial body - wider, stubbier -->
+<path d="M42 36 L42 104 Q42 114 52 114 L78 114 Q88 114 88 104 L88 36" stroke="rgba(255,255,255,0.7)" stroke-width="2" fill="rgba(255,255,255,0.05)"/>
+<!-- Body top ridge -->
+<line x1="42" y1="42" x2="88" y2="42" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
+<!-- Body bottom ridge -->
+<line x1="42" y1="98" x2="88" y2="98" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
+<!-- PRC banner - extends past oval, dark bg -->
+<rect x="10" y="60" width="110" height="26" rx="4" fill="rgba(0,0,0,0.35)" stroke="#fff" stroke-width="2"/>
+<!-- Banner inner fill -->
+<rect x="12" y="62" width="106" height="22" rx="3" fill="rgba(255,255,255,0.12)"/>
+<!-- PRC text - bold, wide -->
+<text x="65" y="78.5" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="20" letter-spacing="7">PRC</text>
 </svg></div>
 <div class="hero-title">Premium Research Peptides<br>Without the Premium Price</div>
 <div class="hero-auth">The Peptide Authority</div>
