--- a/site.html
+++ b/site.html
@@ -295,28 +295,7 @@ if (document.readyState === 'loading') {
 </header>
 
 <section class="hero">
-<div class="hero-logo"><svg viewBox="0 0 130 140" fill="none" xmlns="http://www.w3.org/2000/svg">
-<!-- Outer oval - dark navy -->
-<ellipse cx="65" cy="72" rx="48" ry="56" stroke="#fff" stroke-width="2.8"/>
-<!-- Vial cap - flat top -->
-<rect x="44" y="16" width="42" height="10" rx="3" fill="rgba(255,255,255,0.1)" stroke="rgba(255,255,255,0.7)" stroke-width="1.8"/>
-<!-- Cap ridge line -->
-<line x1="44" y1="22" x2="86" y2="22" stroke="rgba(255,255,255,0.4)" stroke-width="1"/>
-<!-- Vial neck -->
-<path d="M50 26 L50 36 L80 36 L80 26" stroke="rgba(255,255,255,0.7)" stroke-width="1.8" fill="none"/>
-<!-- Vial body - wider, stubbier -->
-<path d="M42 36 L42 104 Q42 114 52 114 L78 114 Q88 114 88 104 L88 36" stroke="rgba(255,255,255,0.7)" stroke-width="2" fill="rgba(255,255,255,0.05)"/>
-<!-- Body top ridge -->
-<line x1="42" y1="42" x2="88" y2="42" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
-<!-- Body bottom ridge -->
-<line x1="42" y1="98" x2="88" y2="98" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
-<!-- PRC banner - extends past oval, dark bg -->
-<rect x="10" y="60" width="110" height="26" rx="4" fill="rgba(0,0,0,0.35)" stroke="#fff" stroke-width="2"/>
-<!-- Banner inner fill -->
-<rect x="12" y="62" width="106" height="22" rx="3" fill="rgba(255,255,255,0.12)"/>
-<!-- PRC text - bold, wide -->
-<text x="65" y="78.5" text-anchor="middle" fill="#fff" font-family="Arial,Helvetica,sans-serif" font-weight="900" font-size="20" letter-spacing="7">PRC</text>
-</svg></div>
+<div class="hero-logo"><img src="logo.jpg" alt="PRC Logo" style="width:110px;height:auto;border-radius:4px"></div>
 <div class="hero-title">Premium Research Peptides<br>Without the Premium Price</div>
 <div class="hero-auth">The Peptide Authority</div>
 <div class="hero-line"></div>
