Hero: unbiased research hub - remove shop CTA, research-focused stats

--- a/site.html
+++ b/site.html
@@ -305,15 +305,14 @@ if (document.readyState === 'loading') {
 <div class="hero-prop"><span class="hero-prop-label">Education</span><span class="hero-prop-text">Research-Grade Info</span></div>
 </div>
 <div class="hero-stats">
-<span><strong>44+</strong> Products</span>
-<span><strong>393</strong> Vendors</span>
-<span><strong>10</strong> Categories</span>
+<span><strong>393</strong> Vendors Reviewed</span>
+<span><strong>387</strong> Products Compared</span>
+<span><strong>23+</strong> Vendors Tracked</span>
 <span><strong>2026</strong> Updated</span>
 </div>
 <div class="hero-btns">
 <label for="tab-resources" class="btn-primary" onclick="switchTab('tab-resources');return false">Explore Resources</label>
 <label for="tab-vendors" class="btn-outline" onclick="switchTab('tab-vendors');return false">Vendor Directory</label>
-<label for="tab-shop" class="btn-outline" onclick="switchTab('tab-shop');return false">Shop Peptides</label>
 </div>
 <div class="hero-research">For Research Use Only.</div>
 </section>
