--- a/site.html
+++ b/site.html
@@ -46,7 +46,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:11px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
 .btn-primary:hover{transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,0.2)}
 .btn-outline:hover{border-color:#fff;transform:translateY(-2px)}
-.hero-sub{position:relative;z-index:1;font-size:0.88rem;color:#fff;margin-top:14px;line-height:1.5;max-width:520px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
+.hero-sub{position:relative;z-index:1;font-size:0.88rem;margin-top:14px;line-height:1.5;max-width:520px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards;background:linear-gradient(90deg,#fff,#93c5fd,#fff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;font-weight:500}
 .hero-research{position:relative;z-index:1;font-size:0.65rem;color:rgba(255,255,255,0.25);font-style:italic;margin-top:24px;letter-spacing:0.5px}
 @media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}.hero-logo img{width:90px!important}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
