Logo: transparent PNG, blends on any background

--- a/site.html
+++ b/site.html
@@ -288,7 +288,7 @@ if (document.readyState === 'loading') {
 </header>
 
 <section class="hero">
-<div class="hero-logo"><img src="prc-logo.jpg" alt="PRC Logo" style="width:120px;height:auto"></div>
+<div class="hero-logo"><img src="prc-logo.png" alt="PRC Logo" style="width:120px;height:auto"></div>
 <div class="hero-title">PEPTIDE RESOURCE CENTER</div>
 <div class="hero-auth">The Peptide Authority</div>
 <div class="hero-line"></div>
